--- a/app/views/layouts/activescaffold.html.erb
+++ b/app/views/layouts/activescaffold.html.erb
@@ -3,8 +3,9 @@
 <html>
 <head>
 	<%= javascript_include_tag :defaults %>
+	<%= javascript_include_tag "jquery-1.4.min.js", "jquery-ui-1.7.2.custom.min.js", "admin.js" %>
 	<%= active_scaffold_includes %>
-	<%= stylesheet_link_tag "as_overrides" %>
+	<%= stylesheet_link_tag "as_overrides", "jquery-ui-1.7.2.custom.css" %>
 	<title>Diamond Way Library - Administration - <%= @pagename %></title>
 </head>
 <body>
