--- a/app/views/layouts/zh.haml
+++ b/app/views/layouts/zh.haml
@@ -2,7 +2,7 @@
 !!! Strict
 %html{ :xmlns => "http://www.w3.org/1999/xhtml" }
   %head
-    = javascript_include_tag "jquery", "jquery-1.3.2.min.js", "jquery-ui-1.7.2.custom.min.js", "jquery.ba-url.js", "application"
+    = javascript_include_tag "jquery-1.4.min.js", "jquery-ui-1.7.2.custom.min.js", "jquery.ba-bbq.min.js", "genericlibrary"
     = stylesheet_link_tag "zh", "jquery-ui-1.7.2.custom.css"
     %link{:rel => "shortcut icon", :href => "/favicon.ico"}
     %meta{ :content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type" }
