--- a/app/views/layouts/activescaffold.html.erb
+++ b/app/views/layouts/activescaffold.html.erb
@@ -47,5 +47,16 @@
 			<p>Diamond Way Library - Administration</p>
 		</div>
 	</div>
+
+	<div id="export-form" title="Export items as Excel spreadsheet">
+
+		<form>
+		<fieldset>
+			<label for="library">Choose library to export items from</label>
+			<input type="text" name="library_id" id="library_id" class="text ui-widget-content ui-corner-all" />
+		</fieldset>
+		</form>
+	</div>
+
 </body>
 </html>
