Add Lodz library

--- a/app/views/layouts/activescaffold.html.erb
+++ b/app/views/layouts/activescaffold.html.erb
@@ -55,6 +55,7 @@
 				<option value='3'>EC</option>
 				<option value='2'>KIBI</option>
 				<option value='6'>Z&uuml;rich</option>
+				<option value='7'>Lodz</option>
 			</select>
 		<% end %>
 	</div>
