Footer with correct link

--- a/app/views/layouts/lodz.haml
+++ b/app/views/layouts/lodz.haml
@@ -43,5 +43,7 @@
             = yield
       #push
     #footer
-      %span#footercopyright Copyright &copy; 2011 Diamantweg-Buddhismus &#xb7; Karma Kagy&uuml; Linie &#xb7; Schweiz. Alle Rechte vorbehalten.
+      %span#footercopyright
+        Copyright &copy; 2011
+        %a{ :href => "http://www.buddyzm.pl/" } BZDDLKK
  
