Add Lamas library

--- a/app/views/layouts/activescaffold.html.erb
+++ b/app/views/layouts/activescaffold.html.erb
@@ -53,6 +53,7 @@
 			<select name='library_id'>
 				<option value='1'>ITAS</option>
 				<option value='3'>EC</option>
+				<option value='10'>EC-Lama Ole</option>
 				<option value='2'>KIBI</option>
 				<option value='6'>Z&uuml;rich</option>
 				<option value='7'>Lodz</option>
